<resources>
    <string name="app_name">News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Titulo de la noticia</string>
    <string name="authoTextDumy">Jairo Cruz</string>
    <string name="titleDummy">Busqueda de representantes</string>
    <string name="publishedAt">Fri, 13 Jul 2018</string>
    <string name="txtEmptyList">Select main news sources for you</string>
    <string name="imageContentDescription">Imagen de portada</string>
    <string name="txtDescription">Velit labore sed est, cursus sapien ut fringilla pellentesque ligula ipsum, dui duis urna convallis. Viverra purus vel convallis mollis donec. In id risus in vitae diam, mauris curabitur pede mi nibh vestibulum, nam mattis aenean enim praesent quam ut, dis perferendis pellentesque faucibus magna mauris. Erat wisi pellentesque sit pellentesque mollis. Ipsum pharetra odio. Dui vel nec ornare amet tellus eget, cras in, per metus diam ut phasellus sit curabitur, urna erat ut morbi suspendisse non. Cum amet.</string>
    <string name="txtAuthorDummy">By Jairo Jose Pineda</string>
    <string name="btnChoose">choose</string>
    <string name="imgContentDescriptionNewsPaper">NewsPaper</string>
    <string name="SourcesName">Sources</string>
    <string name="chooseSourceDialogMsg">You can only choose 20 sources</string>
    <string name="chooseSourceDialogCancel">Cancel</string>
    <string name="chooseSourceDialogOk">Ok</string>
</resources>
